@@ -1,9 +1,11 @@
 package digdir.dc24_eu_wallet.component;
 
-import com.google.gson.Gson;
 import digdir.dc24_eu_wallet.dto.*;
 import digdir.dc24_eu_wallet.service.HttpService;
 import digdir.dc24_eu_wallet.service.RequestService;
+
+import com.google.gson.Gson;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,9 +25,12 @@ import java.util.*;
 @Component
 public class SendWebCred {
   public static final Logger logger = LoggerFactory.getLogger(SendWebCred.class);
+
   private final HttpService httpService;
   private final RequestService requestService;
+
   Gson gson = new Gson();
+
   @Value("${MATTR_TENANT_URL}")
   private String url;
   @Value("${DID_WEB}")
@@ -34,7 +39,6 @@ public class SendWebCred {
   private String domain;
   @Value("${DID_WEB_EXTENSION}")
   private String didWebExt;
-
 
   /**
    * Constructs an SendWebCred with the required services.
@@ -47,7 +51,6 @@ public class SendWebCred {
     this.httpService = httpService;
     this.requestService = requestService;
   }
-
 
   /**
    * This method is a center point that's handle creating Web credentials from
@@ -80,7 +83,6 @@ public class SendWebCred {
     }
   }
 
-
   /**
    * This CreateSubjects method reformat the CredentialDTO to a List of CredentialPost.CredentialSubject
    * Each CredentialSubject will be sent and made into a web-cred that will be saved
@@ -91,8 +93,7 @@ public class SendWebCred {
    * @param credentialDTO A list of all credentials, taken from ChallengerAndCred
    * @return Return a list of CredentialPost.CredentialSubjects
    */
-  private List<CredentialCardDTO.CredentialSubject> createSubjects(CredentialDTO credentialDTO, String walletDID){
-
+  private List<CredentialCardDTO.CredentialSubject> createSubjects(CredentialDTO credentialDTO, String walletDID) {
     List<CredentialCardDTO.CredentialSubject> subjectContainers = new ArrayList<>();
 
     for (CredentialDTO.Cred cred: credentialDTO.getCred()) {
@@ -102,31 +103,29 @@ public class SendWebCred {
       subject.setSub(cred.getSub());
       subject.setPid(cred.getPid());
 
-      for (CredentialDTO.AuthorizationDetails authDetails: cred.getAuthorization_details()) {
+      for (CredentialDTO.AuthorizationDetails authDetails: cred.getAuthorizationDetails()) {
         CredentialCardDTO.AuthorizationDetails authorizationDetails = new CredentialCardDTO.AuthorizationDetails();
 
         authorizationDetails.setResource(authDetails.getResource());
         authorizationDetails.setType(authDetails.getType());
-        authorizationDetails.setResource_name(authDetails.getResource_name());
+        authorizationDetails.setResourceName(authDetails.getResourceName());
 
         for (CredentialDTO.Reportees repo: authDetails.getReportees()) {
           CredentialCardDTO.Reportees reportees = new CredentialCardDTO.Reportees();
 
-          reportees.setID(repo.getID());
+          reportees.setId(repo.getID());
           reportees.setAuthority(repo.getAuthority());
           reportees.setName(repo.getName());
           reportees.setRights(repo.getRights());
 
           authorizationDetails.addReportees(reportees);
         }
-        subject.addAuthorization_details(authorizationDetails);
+        subject.addAuthorizationDetails(authorizationDetails);
       }
       subjectContainers.add(subject);
     }
     return subjectContainers;
-
   }
-
 
   /**
    * Create multiple Web Credential Card with the specific subject
@@ -135,7 +134,7 @@ public class SendWebCred {
    * @param credentialSubjects A list of credentialSubjects;
    * @return Return a List of CredentialPost that are ready to Signed.
    */
-  private List<CredentialCardDTO> createWebCards(List<CredentialCardDTO.CredentialSubject> credentialSubjects){
+  private List<CredentialCardDTO> createWebCards(List<CredentialCardDTO.CredentialSubject> credentialSubjects) {
     List<CredentialCardDTO> credentialCardDTOS = new ArrayList<>();
 
     for (CredentialCardDTO.CredentialSubject subject: credentialSubjects) {
@@ -148,7 +147,7 @@ public class SendWebCred {
 
       CredentialCardDTO.Payload payload = new CredentialCardDTO.Payload();
       payload.setName("Ansattporten Credential");
-      payload.setDescription(subject.getAuthorization_details().get(0).getReportees().get(0).getName());
+      payload.setDescription(subject.getAuthorizationDetails().getFirst().getReportees().getFirst().getName());
       payload.setType(List.of("AnsattportenCredential"));
 
       CredentialCardDTO.CredentialBranding branding = new CredentialCardDTO.CredentialBranding();
@@ -172,7 +171,6 @@ public class SendWebCred {
     return credentialCardDTOS;
   }
 
-
   /**
    * Sign all the Web Credentials from the Object CredentialPost.
    *
@@ -192,7 +190,6 @@ public class SendWebCred {
     return credentialSignDTOS;
   }
 
-
   /**
    * Encrypt all the signed Web Credentials.
    *
@@ -200,15 +197,10 @@ public class SendWebCred {
    * @param holder The wallet DID.
    * @return Return a EncryptedPost object that will be sent to the wallet.
    */
-  private List<EncryptTemplateDTO> encryptWebCred(List<CredentialSignDTO> credentialSignDTOS, String holder){
-
+  private List<EncryptTemplateDTO> encryptWebCred(List<CredentialSignDTO> credentialSignDTOS, String holder) {
     List<EncryptTemplateDTO> encryptTemplateDTOS = new ArrayList<>();
 
-    LinkedList<CredentialSignDTO> fifo = new LinkedList<CredentialSignDTO>();
-
-    for (CredentialSignDTO cred: credentialSignDTOS) {
-      fifo.add(cred);
-    }
+      LinkedList<CredentialSignDTO> fifo = new LinkedList<>(credentialSignDTOS);
 
     while(!fifo.isEmpty()){
       String uniqueID = UUID.randomUUID().toString();
@@ -218,7 +210,7 @@ public class SendWebCred {
       payload.setType("https://mattr.global/schemas/verifiable-credential/offer/Direct");
       payload.setTo(Collections.singletonList(holder));
       payload.setFrom(didWeb);
-      payload.setCreated_time(System.currentTimeMillis() / 1000);
+      payload.setCreatedTime(System.currentTimeMillis() / 1000);
 
       EncryptTemplateDTO.Body body = new EncryptTemplateDTO.Body();
 
@@ -235,10 +227,8 @@ public class SendWebCred {
       EncryptTemplateDTO encryptTemplateDTO = new EncryptTemplateDTO(didWebExt, Collections.singletonList(holder), payload);
       encryptTemplateDTOS.add(encryptTemplateDTO);
     }
-
    return encryptTemplateDTOS;
   }
-
 
   /**
    * Gets the data that will be encrypted and encrypt it with Mattr.
@@ -253,7 +243,6 @@ public class SendWebCred {
 
     return gson.fromJson(responseBody, EncryptedCredentialDTO.class);
   }
-
 
   /**
    * Sends an encrypted credential
@@ -271,21 +260,7 @@ public class SendWebCred {
     jweMessage.setTag(encryptedCredentialDTO.getJwe().getTag());
 
     for (EncryptedCredentialDTO.Recipient recipient: encryptedCredentialDTO.getJwe().getRecipients()) {
-      SendCredentialDTO.Header header = new SendCredentialDTO.Header();
-      SendCredentialDTO.Recipient rep = new SendCredentialDTO.Recipient();
-
-      header.setAlg(recipient.getHeader().getAlg());
-      header.setKid(recipient.getHeader().getKid());
-      header.setSkid(recipient.getHeader().getSkid());
-
-      SendCredentialDTO.Epk epk = new SendCredentialDTO.Epk();
-      epk.setKty(recipient.getHeader().getEpk().getKty());
-      epk.setCrv(recipient.getHeader().getEpk().getCrv());
-      epk.setX(recipient.getHeader().getEpk().getX());
-      header.setEpk(epk);
-
-      rep.setHeader(header);
-      rep.setEncryptedKey(recipient.getEncryptedKey());
+      SendCredentialDTO.Recipient rep = getRecipient(recipient);
 
       jweMessage.addRecipients(rep);
     }
@@ -293,5 +268,30 @@ public class SendWebCred {
     SendCredentialDTO sendCredentialDTO = new SendCredentialDTO(holder, jweMessage);
     String sendMessage = gson.toJson(sendCredentialDTO);
     httpService.postRequest(url + "/core/v1/messaging/send", requestService.getJwt(), sendMessage);
+  }
+
+  /**
+   * Converts an EncryptedCredentialDTO.Recipient to a SendCredentialDTO to a SendCredentialDTO.Recipient.
+   *
+   * @param recipient The EncryptedCredentialDTO.Recipient object to be converted
+   * @return The converted SendCredentialDTO.Recipient object
+   */
+  private static SendCredentialDTO.Recipient getRecipient(EncryptedCredentialDTO.Recipient recipient) {
+    SendCredentialDTO.Header header = new SendCredentialDTO.Header();
+    SendCredentialDTO.Recipient rep = new SendCredentialDTO.Recipient();
+
+    header.setAlg(recipient.getHeader().getAlg());
+    header.setKid(recipient.getHeader().getKid());
+    header.setSkid(recipient.getHeader().getSkid());
+
+    SendCredentialDTO.Epk epk = new SendCredentialDTO.Epk();
+    epk.setKty(recipient.getHeader().getEpk().getKty());
+    epk.setCrv(recipient.getHeader().getEpk().getCrv());
+    epk.setX(recipient.getHeader().getEpk().getX());
+    header.setEpk(epk);
+
+    rep.setHeader(header);
+    rep.setEncryptedKey(recipient.getEncryptedKey());
+    return rep;
   }
 }
